feat: implement task properties (assignee, progress, blocked) with architectural improvements
Add three new task properties: assignee (replacing claimed_by_author/claimed_by_agent_id), progress tracking (0-100), and blocked status for tasks stuck waiting. Includes comprehensive CLI commands (claim, block, unblock, steal, progress) and refinements from code review.

Code review fixes:
- Fix stealTask to properly use projection handler instead of direct UPDATE
- Add migration progress indicator showing event count during schema rebuild
- Standardize CLI arguments (--reason option, --agent-id for clarity)
- Extract duplicate progress validation to shared helper
- Add status-only index for efficient status-only queries

All 360 tests pass, lint checks pass.

--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -807,7 +807,7 @@
           <div class="card-title">${escapeHtml(task.title)}</div>
           <div class="card-meta">
             <span class="card-project">${escapeHtml(task.project)}</span>
-            ${task.claimed_by_agent_id ? `<span class="card-agent">${task.claimed_by_agent_id.slice(0, 8)}</span>` : ''}
+            ${task.assignee ? `<span class="card-agent">${task.assignee.slice(0, 8)}</span>` : ''}
           </div>
           ${extra}
         </div>
@@ -939,14 +939,14 @@
           </div>
         `;
 
-        if (data.task.claimed_by_agent_id) {
+        if (data.task.assignee) {
           html += `
             <div class="modal-section">
               <div class="modal-section-title">Claimed By</div>
               <div class="modal-meta">
                 <div class="modal-meta-item">
                   <div class="modal-meta-label">Agent</div>
-                  <div class="modal-meta-value">${data.task.claimed_by_agent_id}</div>
+                  <div class="modal-meta-value">${data.task.assignee}</div>
                 </div>
                 ${data.task.lease_until ? `
                   <div class="modal-meta-item">
