--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -15,11 +15,11 @@
       --accent: #f59e0b;
       --accent-dim: #b45309;
       --border: #404040;
-      --status-backlog: #6b7280;
-      --status-blocked: #ef4444;
-      --status-ready: #22c55e;
-      --status-in-progress: #3b82f6;
-      --status-done: #6b7280;
+      --status-backlog: #6b7280;     /* gray - not yet prioritized */
+      --status-blocked: #ef4444;     /* red - stuck, needs help */
+      --status-ready: #3b82f6;       /* blue - available to claim */
+      --status-in-progress: #f59e0b; /* orange - active work */
+      --status-done: #22c55e;        /* green - completed */
       --font-mono: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
     }
 
@@ -964,11 +964,11 @@
       if (type === 'root') return '#f59e0b';
       if (type === 'project') return '#e5e5e5';
       const colors = {
-        backlog: '#6b7280',
-        ready: '#22c55e',
-        in_progress: '#3b82f6',
-        blocked: '#ef4444',
-        done: '#6b7280',
+        backlog: '#6b7280',     // gray - not yet prioritized
+        ready: '#3b82f6',       // blue - available to claim
+        in_progress: '#f59e0b', // orange - active work
+        blocked: '#ef4444',     // red - stuck, needs help
+        done: '#22c55e',        // green - completed
       };
       return colors[status] ?? '#6b7280';
     }
@@ -981,28 +981,48 @@
     }
 
     function transformTasksToGraph(taskList) {
-      const nodes = [{ id: 'root', type: 'root', name: 'HZL', ring: 0 }];
+      const nodes = [{ id: 'root', type: 'root', name: 'HZL', ring: 0, angle: 0 }];
       const links = [];
-      const projects = new Set();
+      const projectList = [];
+      const projectAngles = new Map();
       nodeStatusMap.clear();
 
+      // First pass: collect unique projects
+      for (const task of taskList) {
+        if (task.project && !projectAngles.has(task.project)) {
+          projectList.push(task.project);
+          projectAngles.set(task.project, 0);
+        }
+      }
+
+      // Assign angles to projects (evenly distributed)
+      projectList.forEach((proj, i) => {
+        const angle = (2 * Math.PI * i) / projectList.length;
+        projectAngles.set(proj, angle);
+      });
+
+      // Second pass: create nodes
+      const addedProjects = new Set();
       for (const task of taskList) {
         if (!task.project || !task.task_id) {
           console.warn('[hzl] Skipping task with missing required fields:', task);
           continue;
         }
 
+        const projAngle = projectAngles.get(task.project);
+
         // Add project node if not seen
-        if (!projects.has(task.project)) {
-          projects.add(task.project);
+        if (!addedProjects.has(task.project)) {
+          addedProjects.add(task.project);
           const projectId = `project:${task.project}`;
-          nodes.push({ id: projectId, type: 'project', name: task.project, ring: 1 });
+          nodes.push({ id: projectId, type: 'project', name: task.project, ring: 1, angle: projAngle });
           links.push({ source: projectId, target: 'root', type: 'hierarchy' });
           nodeStatusMap.set(projectId, null);
         }
 
-        // Add task node
+        // Add task node with same angle as its project (with small random offset)
         const ring = task.parent_id ? 3 : 2;
+        const angleOffset = (Math.random() - 0.5) * 0.3; // small spread within project
         nodes.push({
           id: task.task_id,
           type: task.parent_id ? 'subtask' : 'task',
@@ -1010,6 +1030,8 @@
           status: task.status,
           progress: task.progress ?? 0,
           ring,
+          angle: projAngle + angleOffset,
+          project: task.project,
         });
         nodeStatusMap.set(task.task_id, task.status);
 
@@ -1040,37 +1062,50 @@
       // Hide loading spinner
       graphLoading.style.display = 'none';
 
-      const RING_RADII = { 0: 0, 1: 150, 2: 300, 3: 450 };
+      const RING_RADII = { 0: 0, 1: 180, 2: 360, 3: 540 };
       const baseRadius = window.innerWidth < 768 ? 0.6 : 1;
 
+      // Pre-position nodes based on angle and ring
+      const graphData = transformTasksToGraph(tasks);
+      for (const node of graphData.nodes) {
+        const radius = (RING_RADII[node.ring] ?? 300) * baseRadius;
+        node.x = Math.cos(node.angle || 0) * radius;
+        node.y = Math.sin(node.angle || 0) * radius;
+      }
+
       graphInstance = ForceGraph()(graphContainer)
-        .graphData(transformTasksToGraph(tasks))
+        .graphData(graphData)
         .backgroundColor('#1a1a1a')
         .nodeLabel(n => n.name)
         .nodeColor(n => getStatusColor(n.status, n.type))
         .nodeVal(n => getNodeSize(n))
-        .linkColor(l => l.type === 'dependency' ? '#f59e0b' : '#40404080')
+        .linkColor(l => l.type === 'dependency' ? '#e57373' : '#40404080')
         .linkWidth(l => l.type === 'dependency' ? 2 : 1)
+        .linkLabel(l => l.type === 'dependency' ? 'blocks' : '')
+        .linkDirectionalArrowLength(l => l.type === 'dependency' ? 6 : 0)
+        .linkDirectionalArrowRelPos(1)
         .onNodeClick(n => {
           if (n.type !== 'root' && n.type !== 'project') {
             openTaskModal(n.id);
           }
         })
-        // Radial layout
-        .d3Force('radial', d3.forceRadial(d => {
-          const radius = RING_RADII[d.ring] ?? 300;
-          return radius * baseRadius;
-        }).strength(0.8))
-        .d3Force('collision', d3.forceCollide(d => getNodeSize(d) + 4))
-        .d3Force('link', d3.forceLink().strength(0.05))
+        // Forces to keep nodes in their angular sectors
+        .d3Force('x', d3.forceX(d => {
+          const radius = (RING_RADII[d.ring] ?? 300) * baseRadius;
+          return Math.cos(d.angle || 0) * radius;
+        }).strength(0.3))
+        .d3Force('y', d3.forceY(d => {
+          const radius = (RING_RADII[d.ring] ?? 300) * baseRadius;
+          return Math.sin(d.angle || 0) * radius;
+        }).strength(0.3))
+        .d3Force('collision', d3.forceCollide(d => getNodeSize(d) + 15))
+        .d3Force('charge', d3.forceManyBody().strength(-50))
+        .d3Force('link', d3.forceLink().strength(0.1))
         // Animated particles on dependency edges
         .linkDirectionalParticles(l => l.type === 'dependency' ? 3 : 0)
         .linkDirectionalParticleWidth(3)
         .linkDirectionalParticleSpeed(0.005)
-        .linkDirectionalParticleColor(l => {
-          const sourceId = typeof l.source === 'object' ? l.source.id : l.source;
-          return getStatusColor(nodeStatusMap.get(sourceId));
-        })
+        .linkDirectionalParticleColor(() => '#e57373')
         // Custom node rendering for root glow
         .nodeCanvasObject((node, ctx, globalScale) => {
           if (node.type === 'root') {
@@ -1089,6 +1124,15 @@
           ctx.fillStyle = getStatusColor(node.status, node.type);
           ctx.fill();
 
+          // Label for root node
+          if (node.type === 'root') {
+            ctx.font = `bold ${11 / globalScale}px ui-monospace`;
+            ctx.fillStyle = '#1a1a1a';
+            ctx.textAlign = 'center';
+            ctx.textBaseline = 'middle';
+            ctx.fillText('HZL', node.x, node.y + 1);
+          }
+
           // Label for projects
           if (node.type === 'project' && globalScale > 0.5) {
             ctx.font = `${10 / globalScale}px ui-monospace`;
@@ -1106,11 +1150,51 @@
         });
 
       graphInitialized = true;
+
+      // Zoom to fit after layout settles
+      setTimeout(() => {
+        if (graphInstance) {
+          graphInstance.zoomToFit(400, 50);
+        }
+      }, 500);
+    }
+
+    let lastGraphDataHash = '';
+
+    function hashTasks(taskList) {
+      // Simple hash based on task ids, statuses, and dependencies
+      return taskList.map(t => `${t.task_id}:${t.status}:${t.progress}`).sort().join('|');
     }
 
     function updateGraphData() {
       if (graphInstance && graphInitialized) {
-        graphInstance.graphData(transformTasksToGraph(tasks));
+        const newHash = hashTasks(tasks);
+        if (newHash !== lastGraphDataHash) {
+          lastGraphDataHash = newHash;
+
+          // Get current node positions
+          const currentData = graphInstance.graphData();
+          const positionMap = new Map();
+          for (const node of currentData.nodes) {
+            if (node.x !== undefined && node.y !== undefined) {
+              positionMap.set(node.id, { x: node.x, y: node.y, vx: node.vx, vy: node.vy });
+            }
+          }
+
+          // Create new graph data and preserve positions
+          const newData = transformTasksToGraph(tasks);
+          for (const node of newData.nodes) {
+            const pos = positionMap.get(node.id);
+            if (pos) {
+              node.x = pos.x;
+              node.y = pos.y;
+              node.vx = pos.vx;
+              node.vy = pos.vy;
+            }
+          }
+
+          graphInstance.graphData(newData);
+        }
       }
     }
 
@@ -1647,6 +1731,8 @@
     }, 1000);
   </script>
 
+  <!-- d3 for graph layout forces -->
+  <script src="https://cdn.jsdelivr.net/npm/d3@7/dist/d3.min.js" defer></script>
   <!-- Force-graph library for Graph view -->
   <script src="https://cdn.jsdelivr.net/npm/force-graph@1/dist/force-graph.min.js"
           defer
